--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.0",
     "hbs": "~3.1.0",
+    "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
