--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.13.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^1.2.0",
     "express": "~4.13.0",
     "hbs": "~3.1.0",
     "monk": "^1.0.1",
