install slack-client

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
+    "slack-client": "^1.4.1",
     "unirest": "^0.4.2"
   }
 }
